--- a/zipkin-web/src/main/resources/templates/v2/trace.mustache
+++ b/zipkin-web/src/main/resources/templates/v2/trace.mustache
@@ -27,6 +27,7 @@
 </div>
 
 <div class='row' id='trace-container'>
+  <div class='handle'>Trace id: {{traceId}}</div>
   <div id='timeLabel' class='span'>
     <div class='handle'>Services</div>
     <div class='duration-container'>
