--- a/zipkin-web/src/main/resources/templates/v2/layout.mustache
+++ b/zipkin-web/src/main/resources/templates/v2/layout.mustache
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/app/css/dependency.css">
   </head>
   <body>
-    <div class='navbar navbar-inverse navbar-fixed-top' role='navigation'>
+    <div class='navbar navbar-inverse navbar-fixed-top cocs-logo' role='navigation'>
       <div class='container'>
         <div class='navbar-header'>
           <a class='navbar-brand' href='/'>
